@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Apache-Pod
-version:      0.20
+version:      0.22
 version_from: lib/Apache/Pod.pm
 installdirs:  site
 requires:
